@@ -60,16 +60,12 @@ SECTIONS
     *(.rdata)
     *(SORT(.rdata$*))
     *(.rdata_cygwin_nocopy)
-    __rt_psrelocs_start = .;
+    ___RUNTIME_PSEUDO_RELOC_LIST__ = .;
+    __RUNTIME_PSEUDO_RELOC_LIST__ = .;
     *(.rdata_runtime_pseudo_reloc)
-    __rt_psrelocs_end = .;
-
+    ___RUNTIME_PSEUDO_RELOC_LIST_END__ = .;
+    __RUNTIME_PSEUDO_RELOC_LIST_END__ = .;
   }
-  __rt_psrelocs_size = __rt_psrelocs_end - __rt_psrelocs_start;
-  ___RUNTIME_PSEUDO_RELOC_LIST_END__ = .;
-  __RUNTIME_PSEUDO_RELOC_LIST_END__ = .;
-  ___RUNTIME_PSEUDO_RELOC_LIST__ = . - __rt_psrelocs_size;
-  __RUNTIME_PSEUDO_RELOC_LIST__ = . - __rt_psrelocs_size;
   .eh_frame ALIGN(__section_alignment__) :
   {
     *(.eh_frame*)
@@ -137,7 +133,7 @@ SECTIONS
   {
     *(.rsrc)
     *(SORT(.rsrc$*))
-    _SYM (_cygheap_start) = ABSOLUTE(.);
+    _SYM (_cygheap_start) = .;
   }
   .cygheap ALIGN(__section_alignment__) :
   {
@@ -147,7 +143,7 @@ SECTIONS
     . = . + (2048 * 1024);
 #endif
     . = ALIGN(0x10000);
-    _SYM (_cygheap_end) = ABSOLUTE(.);
+    _SYM (_cygheap_end) = .;
   }
   /DISCARD/ :
   {
